$Id$

0.7.3beta
	- fix: slave to inherit keys & acls configs from master as defined
	- fix: Makefile.in add sql/dbconvert_1.3to1.4 as installable file
	- add User, Dept, Location, Email, HINFO fields and groups
          to restricted host form
	- new feature to select download CSV time format by Riku Meskanen
	- new Search Field: Expiration by Riku Meskanen
	- fix import-roots update functionality by Riku Meskanen
	- forward zone port capability added by Riku Meskanen (db-version 1.4)
	- new config option: SAURON_DNSNAME_CHECK_MODE  allows now
	  less strict domain name checking (more AD compatible)
	- new feature: custom DHCP global settings can now be definedo	
	  by Riku Meskanen
	- fix to ACL/key generation by Riku Meskanen
	- typo fixes
	- update-dhcp-info: patch to add --commit option by Ken McKinlay
	- new utility for exporting names/IPs of hosts beloging to groups
	  that match given regular expression: export-by-group
	- when host with 'ether aliases' is deleted, expire these host entries
	  (in addition of removing the ether alias pointer)
	- CGI interface: fix to zone selection bug (if SAURON_PRIVILEGE_MODE=1)
	
0.7.2
	- remove-hosts: new option --host by Otto Fuetterer
	- modhosts: now Ethernet address can be uses as selection criteria
	  by Otto Fuetterer
	- sauron: initial tinydns (DJBDNS) support by Thomas Mangin
	- CGI interface: host group added as search criteria
	- CGI interface: added support for moving host to another zone
	- ACL & address match list support added . New menu 'ACLs' in web
	  interface (new configuration variable ALEVEL_ACLS).
	- new utility for managing (TSIG) keys: keygen
	- database format changes (1.3):
	    - new tables: acls, keys, leases
	    - modified tables: zones, cidr_entries
	    - conversion script now tries to fix possibly broken
	      keys/indexs on tables: vmps,vlans,nets,zones
	    - new indexes to various tables to speedup common queries
        - new utility dhcpd-lease-view for viewing dhcpd.leases file