@@ -94,7 +94,11 @@ my %server_form = (
    iff=>['named_flags_ac','0']},
   {ftype=>12, tag=>'allow_query', name=>'Allow-query',
    iff=>['named_flags_ac','0']},
+  {ftype=>12, tag=>'allow_query_cache', name=>'Allow-query-cache',
+   iff=>['named_flags_ac','0']},
   {ftype=>12, tag=>'allow_recursion', name=>'Allow-recursion',
+   iff=>['named_flags_ac','0']},
+  {ftype=>12, tag=>'allow_notify', name=>'Allow-notify',
    iff=>['named_flags_ac','0']},
   {ftype=>12, tag=>'blackhole', name=>'Blackhole',
    iff=>['named_flags_ac','0']},
