@@ -1,6 +1,7 @@
 $Id$
 
 0.7.3beta
+	- add allow-query-cache and allow-notify option blocks by Riku Meskanen
 	- fix: slave to inherit keys & acls configs from master as defined
 	- fix: Makefile.in add sql/dbconvert_1.3to1.4 as installable file
 	- add User, Dept, Location, Email, HINFO fields and groups
